--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -13,7 +13,7 @@
                 <ol class="breadcrumb text-right">
                     <p>Ligar / Desligar &nbsp;&nbsp;</p>
                     <label class="switch">
-                        <input type="checkbox" id="checkbox" data-toggle="modal" >
+                        <input type="checkbox" id="checkbox" data-toggle="modal">
                         <span class="slider round"></span>
                     </label>
                 </ol>
@@ -26,7 +26,7 @@
 
     <div class="col-sm-12">
         <div class="alert  alert-success alert-dismissible fade show" role="alert">
-            <span class="badge badge-pill badge-success">Bom Serviço! </span>  Não se esqueça de abrir sua loja.
+            <span class="badge badge-pill badge-success">Bom Serviço! </span> Não se esqueça de abrir sua loja.
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
@@ -161,7 +161,7 @@
                 <div id="pedidos" class="row">
 
                     {{!-- fazer o carregamento de cada pedido começando por aqui --}}
-{{#each requests}}
+                    {{#each requests}}
                     <div class="col-sm-4">
                         <h4 class="card-title mb-0">Pedidos</h4>
                         <div class="small text-muted">October 2017</div>
@@ -177,27 +177,50 @@
 
                         </div>
                     </div>
-                    <form action="" method="post">
-                    <div class="form-group mt-1 col-12">
-                        <p class="ml-3">Preparando <input type="radio" name="" id="" value="">&nbsp;&nbsp; Saiu para
-                            Entrega <input type="radio" name="" id="" value="">&nbsp;&nbsp; Entregue <input type="radio"
-                                name="" id="" value=""></p>
-                        <hr>
+                    
+                    {{!-- Area Btn groups --}}
+                    <div class="form-group mt-3 col-12">
+                        <div class="btn-group col-12" role="group" aria-label="Basic example">
+
+                            <form action="/debug" method="post" class="ml-1 col-4">
+                                <input type="hidden" value="Preparando" name="status">
+                                <input type="hidden" name="id" id="id" value="{{idUser}}">
+                                <button type="submit" class="btn btn-dark col-12"
+                                    style="border-radius: 2%;">Preparando</button>
+                            
+                            </form>
+
+                            <form action="/debug" method="post" class="ml-1 col-4">
+                                <input type="hidden" value="A Caminho" name="status">
+                                <input type="hidden" name="id" id="id" value="{{idUser}}">
+                                <button type="submit" class="btn btn-dark col-12" style="border-radius: 2%;">A Caminho</button>
+                            </form>
+
+                            <form action="/debug" method="post" class="ml-1 col-4">
+                                <input type="hidden" value="Entregue" name="status">
+                                <input type="hidden" name="id" id="id" value="{{idUser}}">
+                                <button type="submit" class="btn btn-dark col-12"
+                                    style="border-radius: 2%;">Entregue</button>
+                            </form>
+
+                        </div>
                     </div>
-                    </form>
-                    <div class="form-group col-12">
+                    {{!-- FIM Area Btn groups --}}
+
+                    <div class="form-group mt-2 col-12">
                         <div class="form-group col-4">
                             <h6 class=""><strong>Pedido: </strong> #</h6>
                         </div>
-                        
+
                         <div class="form-group col-8">
                             <h6 class=""><strong>Nome: </strong> {{this.nome}} &nbsp;&nbsp;&nbsp;<strong>Telefone:
                                 </strong> {{trataTelephone this.telephone}}</h6>
                         </div>
-                        
+
                         <div class="form-group ml-3">
                             <h6 class="mt-1"><strong>Total: <i class="fa fa-money"></i></strong></i></h6>
-                            <h6 class="mt-1"><strong>Foma de Pagamento: </strong><i class="fa fa-money"> </i>{{dinheiro this.formPayment}}</h6>
+                            <h6 class="mt-1"><strong>Foma de Pagamento: </strong><i class="fa fa-money">
+                                </i>{{dinheiro this.formPayment}}</h6>
                             <h6 class="mt-1"><strong>Foma de Pagamento: </strong><i class="fa  fa-credit-card">
                                     Cartao</i></h6>
                             <h6 class="mt-1"><strong>Endereço: </strong>{{this.address}}</h6>
@@ -229,11 +252,11 @@
                                 <td class="text-center">{{multiplica this.value this.quantity}}</td>
                             </tr>
                             {{/each}}
-                        
+
                         </table>
                         <hr class="mt-5">
                     </div>
-{{/each}}
+                    {{/each}}
                     {{!-- Fim do each  --}}
 
                     {{!-- Inicio Pagination --}}
