--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -76,7 +76,7 @@
     <script src="/js/saudacoes.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
    <script type="text/javascript" src="/js/lucros.js"></script>
-   <script type="text/javascript" src="/js/maisVendidos"></script>
+   <script type="text/javascript" src="/js/maisVendidos.js"></script>
     
 </body>
 
