--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -180,8 +180,8 @@
                     </div>
 
                     <div class="form-group mt-1 col-12">
-                        <p class="ml-3">Preparando <input type="radio" name="" id="" value="">&nbsp;&nbsp; Saiu para
-                            Entrega <input type="radio" name="" id="" value="">&nbsp;&nbsp; Entregue <input type="radio"
+                        <p class="ml-3">Preparando <input type="radio" onchange="mandaMensagem('{{this.telephone}}','Preparando')" name="" id="" value="">&nbsp;&nbsp; 
+                        Saiu para Entrega <input type="radio" onchange="mandaMensagem('{{this.telephone}}','Saiu para Entrega')" name="" id="" value="">&nbsp;&nbsp; Entregue <input type="radio"
                                 name="" id="" value=""></p>
                         <hr>
                     </div>
