--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -21,7 +21,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/buttonOnOff.css">
     <link rel="stylesheet" href="/css/popup.css">
-    
+
 </head>
 
 <body>
@@ -45,8 +45,8 @@
     <script src="/vendors/popper.js/dist/umd/popper.min.js"></script>
     <script src="/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/assets/js/main.js"></script>
-
     <script src="/scripts/socket.js"></script>
+    <script src="/scripts/enviaMensagem.js"></script>
     <script src="/vendors/chart.js/dist/Chart.bundle.min.js"></script>
     <script src="/assets/js/dashboard.js"></script>
     <script src="/assets/js/widgets.js"></script>
